# 2d_to_3d

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo_multi_view.py  demo_single_view.py  run_scannet_minimal.py  run_scannet_multiview.py
scene0207_00/: 00000.txt  00010.txt  00020.txt  00030.txt  00040.txt  00050.txt  00060.txt  00070.txt  00080.txt  00090.txt  00100.txt  00110.txt  00120.txt  00130.txt  00140.txt  00150.txt  00160.txt  00170.txt  00180.txt  00190.txt  00200.txt  00210.txt  00220.txt  00230.txt  00240.txt  00250.txt  00260.txt  00270.txt  00280.txt  00290.txt  00300.txt  00310.txt  00320.txt  00330.txt  00340.txt  00350.txt  00360.txt  00370.txt  00380.txt  00390.txt  (+159 more)
tdt3d/: __init__.py  core.py
tests/: test_core.py
