[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdt3d"
version = "0.1.0"
description = "A lightweight 2D-to-3D mask projection toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "OpenAI Assistant"}
]
dependencies = [
  "numpy",
  "opencv-python",
]

[project.optional-dependencies]
open3d = ["open3d"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["tdt3d*"]
